[package]
name = "node-emulator"
version = "0.1.0"
authors = ["Alt Research"]
edition = "2021"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2.0", features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "1.0", features = ["derive"] }
log = { version = "0.4.14" }
derive_more = "0.99.11"
environmental = { version = "1.1.2" }
blake2 = { version = "0.9.1" }
tiny-keccak = { version = "2.0", features = ["keccak"] }
sha2 = { version = "0.10.0" }
twox-hash = { version = "1.6.2" }
byteorder = { version = "1.3.2" }
hash-db = { version = "0.15.2" }
hash256-std-hasher = { version = "0.15.2" }
hex = { version = "0.4", features = ["alloc"] }

futures = { version = "0.3.1" }
# all optional crates.
serde = { version = "1.0.117", features = [ "derive" ] }
#serde-sgx = { optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }

# substrate
# for example_runtime
sp-version = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", features = ["full_crypto"] }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-application-crypto = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16", features = ["full_crypto"] }
sp-state-machine = { version = "0.10.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

sp-io = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-std = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { version = "4.1.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-trie = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-storage = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-externalities = { version = "0.10.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

# Alt
target-runtime = { package = "alt-producer-runtime", path = "../alt-producer/runtime", features = ["sgx-runtime"] }
#target-runtime = { package = "alt-producer-runtime", git = "ssh://git@github.com/alt-research/alt-producer.git", branch = "feature/sgx-runtime", default-features = false, features = ["sgx-runtime"] }

# sgx
#sgx_tstd = { optional = true, rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs", "net", "thread"] }

[features]
no_std = []
# When enabled, the runtime api will not be build.
disable-runtime-api = []

#[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
#sgx_tstd = { git = "https://github.com/smilenow/incubator-teaclave-sgx-sdk", tag = "v1.1.4" }

#[patch.'https://github.com/paritytech/substrate.git']
#sp-version-proc-macro = { git = "https://github.com/troysmilenow/substrate", branch = "polkadot-v0.9.16-sgx" }
[patch.'https://github.com/paritytech/substrate.git']
sp-state-machine = { path = "./state-machine" }

[patch.crates-io]
#libsecp256k1 = { git = "https://github.com/troysmilenow/libsecp256k1", branch = "v0.7.0-no-std" }
#getrandom = { git = "https://github.com/troysmilenow/getrandom", branch = "0.2.4-sgx" }
ethereum = { git = "https://github.com/purestake/ethereum", branch = "tgm-0.11.1-typeinfo-patch" }
